juste pour essayer

--- a/html.html
+++ b/html.html
@@ -11,9 +11,9 @@
 <div class="side-by-side">
     <nav>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li><a href="js.html">JavaScript</a></li>
+            <li><a href="html.html">HTML</a></li>
+			<li><a href="css.html">CSS</a></li>
+			<li><a href="js.html">JavaScript</a></li>
             <li>Log in</li> <!-- enlever les puces -->
             <li>Soumettre un post</li>
         </ul>
