--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <link href="css/reset.css" type="text/css" rel="stylesheet">
-    <link href="css/main.css" type="text/css" rel="stylesheet">
-    <title>Coder pour les noobs</title>
-</head>
-<body>
-<header><h1 id="top">Coder pour les noobs</h1></header>
-<nav>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li><a href="js.html">JavaScript</a></li>
-        <li>Log in</li> <!-- enlever les puces -->
-        <li>Soumettre un post</li>
-    </ul>
-</nav>
-
-<!-- <aside></aside> -->
-<footer>copyright stuff</footer>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<link href="css/reset.css" type="text/css" rel="stylesheet">
+		<link href="css/main.css" type="text/css" rel="stylesheet">
+		<title class="nom-site">Coder pour les noobs</title>
+	</head>
+	<body>
+		<header><h1 id="top">Coder pour les noobs</h1></header>
+		<header><center><h2 id="sommaire">Sommaire</h2></center></header>
+		<nav id="list-option">
+			<ul>
+				<li><a href="html.html">HTML</a></li>
+				<li><a href="css.html">CSS</a></li>
+				<li><a href="js.html">JavaScript</a></li>
+				<li>Log in</li> <!-- enlever les puces -->
+				<li>Soumettre un post</li>
+			</ul>
+		</nav>
+		<!-- <aside></aside> -->
+		<footer>copyright stuff</footer>
+	</body>
 </html>
