--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header><h1 id="top">Coder pour les noobs</h1></header>
-		<header><center><h2 id="sommaire">Sommaire</h2></center></header>
+		<header><h2 id="sommaire">Sommaire</h2></header>
 		<nav id="list-option">
 			<ul>
 				<li><a href="html.html">HTML</a></li>
