Amélio menu + ajout newsletter, à discuter

--- a/css.html
+++ b/css.html
@@ -2,10 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+	<link href="css/reset.css" type="text/css" rel="stylesheet">
+    <link href="css/main.css" type="text/css" rel="stylesheet">
     <title>Coder pour les noobs</title>
 </head>
 <body>
-<header>Coder pour les noobs</header>
+<header><h1 class="top"><a href="index.html"><img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'"></a></h1></header>
 <nav>
     <ul>
         <li>HTML</li>
