Update existing HTML, add pics

--- a/www/html.html
+++ b/www/html.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <link href="css/reset.css" type="text/css" rel="stylesheet">
     <link href="css/main.css" type="text/css" rel="stylesheet">
-    <title>Coder pour les noobs</title>
+    <title>HTML - Coder pour les noobs</title>
 </head>
 <body>
-<header><h1 class="top"><a href="index.html"><img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'"></a></h1></header>
+<header>
+    <h1 class="top" id="top">
+        <a href="index.html">
+            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        </a>
+    </h1>
+</header>
 <div class="side-by-side">
     <nav>
         <ul>
-            <li><a href="html.html">HTML</a></li>
-			<li><a href="css.html">CSS</a></li>
-			<li><a href="js.html">JavaScript</a></li>
-            <li>Log in</li> <!-- enlever les puces -->
-            <li>Soumettre un post</li>
+            <li><a href="login.html">Log in</a></li>
+            <li><a href="css.html">CSS</a></li>
+            <li><a href="js.html">JavaScript</a></li>
         </ul>
     </nav>
     <section>
@@ -23,9 +27,8 @@
             <header class="prog-lang-title">
                 <h2>HyperText Markup Language</h2>
             </header>
-            <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language#D%C3%A9nominations">
+            <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language">
                 <img class="img-link" src="img/html_logo.svg" alt="une image du logo HTML5">
-                <!-- Rick rool the prof? -->
             </a>
         </div>
         <article>
@@ -53,13 +56,11 @@
                 sollicitudin dolor, non sodales erat felis sed odio. Duis malesuada sapien eu ligula cursus vulputate.
                 Vivamus vel consequat lacus, nec porta velit. Curabitur vehicula sem sit amet arcu rutrum tincidunt.
                 Mauris maximus diam vel dolor venenatis pellentesque. </p>
-            <!-- add tableau, liste -->
             <a href="#top" class="to-top">HAUT</a>
         </article>
         <footer></footer>
     </section>
 </div>
-<!-- <aside></aside> -->
 <footer>copyright stuff</footer>
 </body>
 </html>
