--- a/www/css.html
+++ b/www/css.html
@@ -2,36 +2,65 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-	<link href="css/reset.css" type="text/css" rel="stylesheet">
+    <link href="css/reset.css" type="text/css" rel="stylesheet">
     <link href="css/main.css" type="text/css" rel="stylesheet">
-    <title>Coder pour les noobs</title>
+    <title>CSS - Coder pour les noobs</title>
 </head>
 <body>
-<header><h1 class="top"><a href="index.html"><img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'"></a></h1></header>
-<nav>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Log in</li> <!-- enlever les puces -->
-        <li>Soumettre un post</li>
-    </ul>
-</nav>
-<section>
-    <header>HyperText Markup Language</header>
-    <article>
-        <p></p>
-        <h1></h1>
-        <h2></h2>
-        <p></p>
-        <h2></h2>
-        <p></p>
-        <h2></h2>
-        <p></p>
-    </article>
-    <footer></footer>
-</section>
-<!-- <aside></aside> -->
-<footer></footer>
+<header>
+    <h1 class="top" id="top">
+        <a href="index.html">
+            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        </a>
+    </h1>
+</header>
+<div class="side-by-side">
+    <nav>
+        <ul>
+            <li><a href="login.html">Log in</a></li>
+            <li><a href="html.html">HTML</a></li>
+            <li><a href="js.html">JavaScript</a></li>
+        </ul>
+    </nav>
+    <section>
+        <div class="side-by-side" id="pas-si-large">
+            <header class="prog-lang-title">
+                <h2>Cascading Style Sheets</h2>
+            </header>
+            <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade">
+                <img class="img-link" src="img/css_logo.svg" alt="une image du logo CSS3">
+            </a>
+        </div>
+        <article>
+            <h3 class="prog-lang-title">subheader</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas maximus posuere velit a finibus. Class
+                aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae
+                lectus eget nunc porttitor tempor. Curabitur tempus efficitur leo. Aliquam finibus, sem nec volutpat
+                imperdiet, dolor eros fringilla nisi, eget dignissim ante lorem ut augue. Praesent suscipit vestibulum
+                arcu a accumsan. Sed nec sagittis velit. Mauris vitae congue odio. In consectetur dictum metus sed
+                sodales. Suspendisse porta laoreet neque, quis finibus dolor tempus lobortis. Nullam tempus est at leo
+                luctus gravida. Duis libero felis, posuere dictum semper id, mattis ut turpis. Praesent nec eleifend
+                augue, id lobortis eros. </p>
+            <h3>subheader</h3>
+            <p>Integer mollis quis magna ut mattis. Praesent sollicitudin commodo ultrices. Donec et urna purus. Nullam
+                dignissim magna efficitur lacus vulputate ornare. Vestibulum dapibus risus tortor, faucibus mattis
+                libero condimentum et. Pellentesque non ultricies mi, ut vestibulum magna. Integer tortor nisi,
+                ultricies quis ipsum et, convallis gravida velit. Mauris id dapibus lorem. Pellentesque varius congue
+                maximus. </p>
+            <h3>subheader</h3>
+            <p>Donec facilisis sem at nunc varius, in sagittis metus semper. Donec consectetur, justo et euismod
+                convallis, est dolor porta tortor, in eleifend felis urna ut urna. Proin massa eros, efficitur in velit
+                a, rhoncus tincidunt diam. Sed pretium quis massa eget ullamcorper. Suspendisse porttitor, diam ac
+                dictum pharetra, erat quam dapibus metus, a viverra erat libero ac velit. Aenean elit enim, pellentesque
+                id neque eu, imperdiet commodo tortor. Vestibulum consequat, dui ac vulputate ultricies, ligula ante
+                sollicitudin dolor, non sodales erat felis sed odio. Duis malesuada sapien eu ligula cursus vulputate.
+                Vivamus vel consequat lacus, nec porta velit. Curabitur vehicula sem sit amet arcu rutrum tincidunt.
+                Mauris maximus diam vel dolor venenatis pellentesque. </p>
+            <a href="#top" class="to-top">HAUT</a>
+        </article>
+        <footer></footer>
+    </section>
+</div>
+<footer>copyright stuff</footer>
 </body>
 </html>
