--- a/www/login.html
+++ b/www/login.html
@@ -7,45 +7,54 @@
     <title>Coder pour les noobs</title>
 </head>
 <body>
-<header><h1 class="top"><a href="index.html"><img class="img-link" src="img/logo_site.svg"
-                                                  alt="Logo du site 'coder pour les noobs'"></a></h1></header>
-<form action="js/login.js" method="post">
-    <div class="formulaire">
-        <label for="lastname">Nom</label>
-        <input class="required" id="lastname" type="text" placeholder="*" required>
-        <p class="warning" id="lastname-warning" hidden>Non vide</p>
+<header>
+    <h1 class="top" id="top">
+        <a href="index.html">
+            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        </a>
+    </h1>
+</header>
+<div class="side-by-side">
+    <nav>
+        <ul>
+            <li><a href="login.html">Log in</a></li>
+            <li><a href="html.html">HTML</a></li>
+            <li><a href="css.html">CSS</a></li>
+            <li><a href="js.html">JavaScript</a></li>
+        </ul>
+    </nav>
+    <form action="js/login.js" method="post">
+        <div class="formulaire">
+            <label for="lastname">Nom</label>
+            <input class="login-field" id="lastname" type="text" placeholder="*" required>
+            <p class="warning" id="lastname-warning" hidden>doit être non vide</p>
 
-        <label for="firstname">Prénom</label>
-        <input class="required" id="firstname" type="text" placeholder="*" required>
-        <p class="warning" id="firstname-warning" hidden>Non vide</p>
+            <label for="firstname">Prénom</label>
+            <input class="login-field" id="firstname" type="text" placeholder="*" required>
+            <p class="warning" id="firstname-warning" hidden>doit être non vide</p>
 
-        <label for="birthdate">Date de naissance</label>
-        <input type="text" id="birthdate" placeholder="(optionnel) jj/mm/aaaa">
-        <p class="warning" id="birthdate-warning" hidden>Vide, ou au format jj/mm/aaaa</p>
+            <label for="birthdate">Date de naissance</label>
+            <input class="login-field" id="birthdate" type="text" placeholder="(optionnel) jj/mm/aaaa">
+            <p class="warning" id="birthdate-warning" hidden>peut être vide, ou doit être au format jj/mm/aaaa</p>
 
-        <label for="username">Nom d'utilisateur</label>
-        <input class="required" id="username" type="text" placeholder="*" name="username" required>
-        <p class="warning" id="username-warning" hidden>Au moins 6 caractères</p>
+            <label for="username">Nom d'utilisateur</label>
+            <input class="login-field" id="username" type="text" placeholder="*" name="username" required>
+            <p class="warning" id="username-warning" hidden>doit avoir au moins 6 caractères</p>
 
-        <label for="userpwd">Mot de passe</label>
-        <input class="required" id="userpwd" type="password" placeholder="*" name="password" required>
-        <p class="warning" id="userpwd-warning" hidden>
-            Au moins 8 caractères, dont au moins : 1 minuscule, 1 majuscule, 1 chiffre
-        </p>
+            <label for="userpwd">Mot de passe</label>
+            <input class="login-field" id="userpwd" type="password" placeholder="*" name="password" required>
+            <p class="warning" id="userpwd-warning" hidden>
+                doit avoir au moins 8 caractères, dont au moins : 1 minuscule, 1 majuscule, 1 chiffre
+            </p>
 
-        <label for="useremail">E-mail</label>
-        <input class="required" id="useremail" type="text" placeholder="*" required>
-        <p class="warning" id="useremail-warning" hidden>Non vide et au format d'une adresse e-mail</p>
+            <label for="useremail">E-mail</label>
+            <input class="login-field" id="useremail" type="text" placeholder="*" required>
+            <p class="warning" id="useremail-warning" hidden>doit être non vide et au format d'une adresse e-mail</p>
 
-        <button class="bouton-nl" type="submit" disabled>Soumettre</button>
-    </div>
-</form>
-<section>
-    <header></header>
-    <article></article>
-    <footer></footer>
-</section>
-<!-- <aside></aside> -->
+            <button class="bouton-nl" type="submit" disabled>Soumettre</button>
+        </div>
+    </form>
+</div>
 <footer></footer>
 <script type="text/javascript" src="js/login.js"></script>
 </body>
