Move all html in a folder (except index)

--- a/www/html/html.html
+++ b/www/html/html.html
@@ -2,15 +2,15 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <link href="css/reset.css" type="text/css" rel="stylesheet">
-    <link href="css/main.css" type="text/css" rel="stylesheet">
+    <link href="../css/reset.css" type="text/css" rel="stylesheet">
+    <link href="../css/main.css" type="text/css" rel="stylesheet">
     <title>HTML - Coder pour les noobs</title>
 </head>
 <body>
 <header>
     <h1 class="top" id="top">
-        <a href="index.html">
-            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        <a href="../index.html">
+            <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
         </a>
     </h1>
 </header>
@@ -28,7 +28,7 @@
                 <h2>HyperText Markup Language</h2>
             </header>
             <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language">
-                <img class="img-link" src="img/html_logo.svg" alt="une image du logo HTML5">
+                <img class="img-link" src="../img/html_logo.svg" alt="une image du logo HTML5">
             </a>
         </div>
         <article>
