--- a/www/html/js.html
+++ b/www/html/js.html
@@ -2,15 +2,15 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <link href="css/reset.css" type="text/css" rel="stylesheet">
-    <link href="css/main.css" type="text/css" rel="stylesheet">
-    <title>CSS - Coder pour les noobs</title>
+    <link href="../css/reset.css" type="text/css" rel="stylesheet">
+    <link href="../css/main.css" type="text/css" rel="stylesheet">
+    <title>JS - Coder pour les noobs</title>
 </head>
 <body>
 <header>
     <h1 class="top" id="top">
-        <a href="index.html">
-            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        <a href="../index.html">
+            <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
         </a>
     </h1>
 </header>
@@ -19,16 +19,16 @@
         <ul>
             <li><a href="login.html">Log in</a></li>
             <li><a href="html.html">HTML</a></li>
-            <li><a href="js.html">JavaScript</a></li>
+            <li><a href="css.html">CSS</a></li>
         </ul>
     </nav>
     <section>
         <div class="side-by-side" id="pas-si-large">
             <header class="prog-lang-title">
-                <h2>Cascading Style Sheets</h2>
+                <h2>JavaScript</h2>
             </header>
-            <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade">
-                <img class="img-link" src="img/css_logo.svg" alt="une image du logo CSS3">
+            <a href="https://fr.wikipedia.org/wiki/JavaScript">
+                <img class="img-link" src="../img/js_logo.svg" alt="une image du logo JavaScript">
             </a>
         </div>
         <article>
