--- a/www/index.html
+++ b/www/index.html
@@ -17,10 +17,10 @@
 <header><h2 id="sommaire">Sommaire</h2></header>
 <nav id="list">
     <ul id="list-option">
-        <li><a href="login.html">Log in</a></li>
-        <li><a href="html.html">HTML</a></li>
-        <li><a href="css.html">CSS</a></li>
-        <li><a href="js.html">JavaScript</a></li>
+        <li><a href="html/login.html">Log in</a></li>
+        <li><a href="html/html.html">HTML</a></li>
+        <li><a href="html/css.html">CSS</a></li>
+        <li><a href="html/js.html">JavaScript</a></li>
     </ul>
 </nav>
 <form class="newsletter" method="post">
