--- a/www/html/login.html
+++ b/www/html/login.html
@@ -2,28 +2,27 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <link href="css/reset.css" type="text/css" rel="stylesheet">
-    <link href="css/main.css" type="text/css" rel="stylesheet">
+    <link href="../css/reset.css" type="text/css" rel="stylesheet">
+    <link href="../css/main.css" type="text/css" rel="stylesheet">
     <title>Coder pour les noobs</title>
 </head>
 <body>
 <header>
     <h1 class="top" id="top">
-        <a href="index.html">
-            <img class="img-link" src="img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
+        <a href="../index.html">
+            <img class="img-link" src="../img/logo_site.svg" alt="Logo du site 'coder pour les noobs'">
         </a>
     </h1>
 </header>
 <div class="side-by-side">
     <nav>
         <ul>
-            <li><a href="login.html">Log in</a></li>
             <li><a href="html.html">HTML</a></li>
             <li><a href="css.html">CSS</a></li>
             <li><a href="js.html">JavaScript</a></li>
         </ul>
     </nav>
-    <form action="js/login.js" method="post">
+    <form action="../js/login.js" method="post">
         <div class="formulaire">
             <label for="lastname">Nom</label>
             <input class="login-field" id="lastname" type="text" placeholder="*" required>
@@ -56,6 +55,6 @@
     </form>
 </div>
 <footer></footer>
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="../js/login.js"></script>
 </body>
 </html>
