--- a/www/html/html.html
+++ b/www/html/html.html
@@ -16,8 +16,8 @@
 </header>
 <div class="side-by-side">
     <nav>
-        <ul>
-            <li><a href="login.html">Log in</a></li>
+        <ul class="list-option">
+            <li><a href="login.html">Log&nbsp;in</a></li>
             <li><a href="css.html">CSS</a></li>
             <li><a href="js.html">JavaScript</a></li>
         </ul>
@@ -32,7 +32,7 @@
             </a>
         </div>
         <article>
-            <h3 class="prog-lang-title">subheader</h3>
+            <h3>subheader</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas maximus posuere velit a finibus. Class
                 aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae
                 lectus eget nunc porttitor tempor. Curabitur tempus efficitur leo. Aliquam finibus, sem nec volutpat
