--- a/www/html/login.html
+++ b/www/html/login.html
@@ -16,7 +16,7 @@
 </header>
 <div class="side-by-side">
     <nav>
-        <ul>
+        <ul class="list-option">
             <li><a href="html.html">HTML</a></li>
             <li><a href="css.html">CSS</a></li>
             <li><a href="js.html">JavaScript</a></li>
