--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 </header>
 <header><h2 id="sommaire">Sommaire</h2></header>
 <nav id="list">
-    <ul id="list-option">
+    <ul class="list-option index-list">
         <li><a href="html/login.html">Log in</a></li>
         <li><a href="html/html.html">HTML</a></li>
         <li><a href="html/css.html">CSS</a></li>
