--- a/www/html/login.html
+++ b/www/html/login.html
@@ -54,7 +54,7 @@
         </div>
     </form>
 </div>
-<footer></footer>
-<script type="text/javascript" src="../js/login.js"></script>
+<footer>copyright stuff</footer>
+<script src="../js/login.js"></script>
 </body>
 </html>
