--- a/www/html/js.html
+++ b/www/html/js.html
@@ -7,6 +7,9 @@
     <title>JS - Coder pour les noobs</title>
 </head>
 <body>
+<noscript>
+    <p>Ce site utilise JavaScript, mais il semblerait que ce navigateur l'a désactivé</p>
+</noscript>
 <header>
     <h1 class="top" id="top">
         <a href="../index.html">
