Do #11: implement 'submit' button disabled/enabled

--- a/www/html/login.html
+++ b/www/html/login.html
@@ -53,7 +53,7 @@
             <input class="login-field" id="useremail" type="text" placeholder="*" required>
             <p class="warning" id="useremail-warning" hidden>doit être non vide et au format d'une adresse e-mail</p>
 
-            <button class="bouton-nl" type="submit" disabled>Soumettre</button>
+            <button id="login-submit" class="bouton-nl" type="submit" disabled>Soumettre</button>
         </div>
     </form>
 </div>
