Fix bottom paddings to display all content

--- a/www/html/html.html
+++ b/www/html/html.html
@@ -17,7 +17,7 @@
         </a>
     </h1>
 </header>
-<div class="side-by-side">
+<main class="side-by-side">
     <nav>
         <ul class="list-option">
             <li><a href="login.html">Log&nbsp;in</a></li>
@@ -425,7 +425,7 @@
         </article>
         <footer></footer>
     </section>
-</div>
+</main>
 <footer>copyright stuff</footer>
 </body>
 </html>
