--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
                 <label for="newsletter">Newsletter</label>
                 <input class="newsletter" name="newsletter" id="newsletter" placeholder="Entrez votre email">
             </div>
-            <button class="bouton-nl" type="submit">Soumettre</button>
+            <button class="bouton-nl"><a href="img/y2_web.mp4">Soumettre</a></button>
         </div>
     </fieldset>
 </form>
