Make table of contents a tiered ordered list

--- a/www/html/js.html
+++ b/www/html/js.html
@@ -35,32 +35,92 @@
             </a>
         </div>
         <article>
-            <h3>subheader</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas maximus posuere velit a finibus. Class
-                aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas vitae
-                lectus eget nunc porttitor tempor. Curabitur tempus efficitur leo. Aliquam finibus, sem nec volutpat
-                imperdiet, dolor eros fringilla nisi, eget dignissim ante lorem ut augue. Praesent suscipit vestibulum
-                arcu a accumsan. Sed nec sagittis velit. Mauris vitae congue odio. In consectetur dictum metus sed
-                sodales. Suspendisse porta laoreet neque, quis finibus dolor tempus lobortis. Nullam tempus est at leo
-                luctus gravida. Duis libero felis, posuere dictum semper id, mattis ut turpis. Praesent nec eleifend
-                augue, id lobortis eros. </p>
-            <h3>subheader</h3>
-            <p>Integer mollis quis magna ut mattis. Praesent sollicitudin commodo ultrices. Donec et urna purus. Nullam
-                dignissim magna efficitur lacus vulputate ornare. Vestibulum dapibus risus tortor, faucibus mattis
-                libero condimentum et. Pellentesque non ultricies mi, ut vestibulum magna. Integer tortor nisi,
-                ultricies quis ipsum et, convallis gravida velit. Mauris id dapibus lorem. Pellentesque varius congue
-                maximus. </p>
-            <h3>subheader</h3>
-            <p>Donec facilisis sem at nunc varius, in sagittis metus semper. Donec consectetur, justo et euismod
-                convallis, est dolor porta tortor, in eleifend felis urna ut urna. Proin massa eros, efficitur in velit
-                a, rhoncus tincidunt diam. Sed pretium quis massa eget ullamcorper. Suspendisse porttitor, diam ac
-                dictum pharetra, erat quam dapibus metus, a viverra erat libero ac velit. Aenean elit enim, pellentesque
-                id neque eu, imperdiet commodo tortor. Vestibulum consequat, dui ac vulputate ultricies, ligula ante
-                sollicitudin dolor, non sodales erat felis sed odio. Duis malesuada sapien eu ligula cursus vulputate.
-                Vivamus vel consequat lacus, nec porta velit. Curabitur vehicula sem sit amet arcu rutrum tincidunt.
-                Mauris maximus diam vel dolor venenatis pellentesque. </p>
+            <p>JavaScript est un langage de programmation de scripts principalement employé dans les pages web
+                interactives et à ce titre est une partie essentielle des applications web. Avec les langages HTML et
+                CSS, JavaScript est au cœur des langages utilisés par les développeurs web. Une grande majorité des
+                sites web l'utilisent, et la majorité des navigateurs web disposent d'un moteur JavaScript pour
+                l'interpréter.
+            </p>
+            <p>JavaScript est aussi employé pour les serveurs Web avec l'utilisation (par exemple) de Node.js ou de
+                Deno.
+            </p>
+            <p>JavaScript a été créé en 1995 par Brendan Eich et intégré au navigateur web Netscape Navigator 2.0.
+                L'implémentation concurrente de JavaScript par Microsoft dans Internet Explorer jusqu'à sa version 9 se
+                nommait JScript, tandis que celle d'Adobe Systems se nommait ActionScript. JavaScript a été standardisé
+                sous le nom d'ECMAScript en juin 1997 par Ecma International dans le standard ECMA-262. La version en
+                vigueur de ce standard depuis juin 2020 est la 11e édition.
+            </p>
+            <p>C'est un langage orienté objet à prototype : les bases du langage et ses principales interfaces sont
+                fournies par des objets. Cependant, à la différence d'un langage orienté objets, les objets de base ne
+                sont pas des instances de classes. En outre, les fonctions sont des objets de première classe. Le
+                langage supporte le paradigme objet, impératif et fonctionnel.
+            </p>
+            <p> JavaScript est le langage possédant le plus large écosystème grâce à son gestionnaire de dépendances
+                npm, avec environ 500 000 paquets en août 2017.
+            </p>
+            <ol>
+                <li>
+                    Histoire
+                    <ol>
+                        <li>Début</li>
+                        <li>
+                            Standardisation
+                            <ol>
+                                <li>Version 1 : Naissance du standard ECMA-262</li>
+                                <li>Version 2 : Homogénéisation avec le standard ISO/CEI 16262</li>
+                                <li>Version 3 : Améliorations et constitution du langage</li>
+                                <li>Version 4 : L'étape inachevée</li>
+                                <li>Version 5 : Désambiguïsation et nouvelles fonctionnalités</li>
+                                <li>Version 6 : Amélioration du support et des fonctionnalités</li>
+                                <li>De la version 7 à nos jours : une adaptation permanente aux outils du web</li>
+                            </ol>
+                        </li>
+                    </ol>
+                </li>
+                <li>Sécurité</li>
+                <li>
+                    Concepts de programmation
+                    <ol>
+                        <li>Hello world</li>
+                    </ol>
+                </li>
+                <li>Utilisation
+                    <ol>
+                        <li>Dans une page web
+                            <ol>
+                                <li>Incompatibilité</li>
+                                <li>Ajax</li>
+                                <li>JSON</li>
+                            </ol>
+                        </li>
+                    </ol>
+                    <ol>
+                        <li>Autres utilisations
+                            <ol>
+                                <li>Sur un serveur web</li>
+                                <li>Autres supports</li>
+                            </ol>
+                        </li>
+                    </ol>
+                </li>
+                <li>Particularités du langage
+                    <ol>
+                        <li>Liaison des identifiants</li>
+                        <li>Portée lexicale des variables</li>
+                        <li>Déclaration des variables</li>
+                        <li>Variables globales</li>
+                        <li>Fonctions anonymes</li>
+                        <li>Fermetures lexicales</li>
+                        <li>Expressions de fonctions immédiatement invoquées</li>
+                        <li>Prototypes</li>
+                        <li>Séparation des instructions</li>
+                    </ol>
+                </li>
+            </ol>
             <a href="#top" class="to-top">HAUT</a>
         </article>
+
+
         <footer></footer>
     </section>
 </main>
